fix hero alignment and spacing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -510,7 +510,7 @@ button:hover{
   /* ABOUT */
 
   .about{
-  padding:80px 20px 40px;
+  padding:100 20px;
 }
 
   .about{
@@ -528,7 +528,7 @@ button:hover{
   /* SKILLS */
 
 .skills{
-  padding:80px 20px;
+  padding:100px 20px;
 }  
 
   .skills{
